Added many features, for example populateObject. Also fixed bugs when building for iOS.

--- a/JsonFx/JsonFx.Json.UnitTests/JsonFx.Json.UnitTests.csproj
+++ b/JsonFx/JsonFx.Json.UnitTests/JsonFx.Json.UnitTests.csproj
@@ -59,9 +59,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\JsonFx.Json\JsonFx.Json.csproj">
+    <ProjectReference Include="..\JsonFx.Json\JsonFx.csproj">
       <Project>{ABA23F14-7E47-43FE-A3E7-1FF97840C3FB}</Project>
-      <Name>JsonFx.Json</Name>
+      <Name>JsonFx</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
