--- a/JsonFx/JsonFx.Json.UnitTests/JsonFx.Json.UnitTests.csproj
+++ b/JsonFx/JsonFx.Json.UnitTests/JsonFx.Json.UnitTests.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
+    <Reference Include="nunit.framework" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="UnitTests\StronglyTyped.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="JsonFxTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="License.txt">
